--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://zwhumphrey.github.io/React-Portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
